--- a/Quality/Quality/Areas/BulkFGT/Views/MockupWash/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/MockupWash/Index.cshtml
@@ -459,7 +459,7 @@
                                 <tr>
                                     <td colspan="2"><h5>Pressure(kg/cm2)</h5></td>
                                     <td>
-                                        @Html.TextBoxFor(o => o.HTPressure, "", new { @type = "number", @class = "OnlyEdit", @step = "0.1" })
+                                        @Html.TextBoxFor(o => o.HTPressure, "", new { @type = "number", @class = "OnlyEdit", @step = "0.1", @onchange = "value=PressureCheck(value)" })
 
                                     </td>
                                     <td colspan="2"><h5>Cooling Time (min)</h5></td>
@@ -1509,5 +1509,16 @@
                 });
             }
         });
+    }
+
+    function PressureCheck(value) {
+        if (parseFloat(value) >= 99.9) {
+            return 99.9;
+        }
+        else if (parseFloat(value) < 0) {
+            return 0;
+        }
+
+        return Number.parseFloat(value).toFixed(1);
     }
 </script>
