ISP20230614 - Accessory Oven wash and Fab Crocking and Shrinkage功能調整，寫入圖片的方式直接使用MES連線，不要從PMS跨Instance去搞圖片

--- a/Quality/Quality/Areas/BulkFGT/Views/WaterFastness/Detail.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/WaterFastness/Detail.cshtml
@@ -164,7 +164,7 @@
                                 <tr>
                                     <td>
                                         <h4 id="Exit" style=" margin-right: 1em;width:5vw ">
-                                            <a href="@Url.Action("c", "WaterFastness", new { POID = Model.Main.POID})">
+                                            <a href="@Url.Action("IndexBack", "WaterFastness", new { POID = Model.Main.POID})">
                                                 <img src="~/Image/Icon/Exit.png" width="30" />
                                                 Exit
                                             </a>
