--- a/Quality/Quality/Areas/BulkFGT/Views/AccessoryOvenWash/WashTest.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/AccessoryOvenWash/WashTest.cshtml
@@ -153,7 +153,7 @@
                                             </h4>
                                         </td>
                                         <td style="width: 50%;"></td>
-</tbody>
+                                </tbody>
                             </table>
                         </div>
                     </div>
@@ -224,13 +224,22 @@
                                         <td style="width: 20vw;">
                                             @*@Html.DropDownListFor(o => o.WashingTemperature, Model.WashingTemperatureData, new { })*@
 
-                                            <select id="WashingTemperature" name="WashingTemperature" disabled="disabled" style="width:157px;">
-                                                @foreach (var item in Model.WashingTemperatureData)
-                                                {
-                                                    string selected = item.Text.Equals(Model.WashingTemperature.ToString()) ? "selected" : "";
-                                                    <option value="@item.Value" @selected>@item.Text</option>
-                                                }
-                                            </select>
+
+
+                                            @if (Model.BrandID == "ADIDAS" || Model.BrandID == "REEBOK")
+                                            {
+                                                <select id="WashingTemperature" name="WashingTemperature" disabled="disabled" style="width:157px;">
+                                                    @foreach (var item in Model.WashingTemperatureData)
+                                                    {
+                                                        string selected = item.Text.Equals(Model.WashingTemperature.ToString()) ? "selected" : "";
+                                                        <option value="@item.Value" @selected>@item.Text</option>
+                                                    }
+                                                </select>
+                                            }
+                                            else
+                                            {
+                                                @Html.TextBoxFor(o => o.WashingTemperature, "", new { @type = "number", @onchange = "value=IntCheck(value)" })
+                                            }
                                         </td>
                                         <td style="width: 10vw;"><h5>Dry process</h5></td>
                                         <td style="width: 20vw;">
@@ -573,5 +582,8 @@
     function GetPicture(data) {
         $('#WashTestBeforePicture').val(data.BeforePicture.replace("data:image/png;base64,", ""));
         $('#WashTestAfterPicture').val(data.AfterPicture.replace("data:image/png;base64,", ""));
+    }
+    function IntCheck(value) {
+        return parseInt(value);
     }
 </script>
