--- a/Quality/Quality/Areas/BulkFGT/Views/WaterFastness/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/WaterFastness/Index.cshtml
@@ -180,7 +180,7 @@
                                 </td>
                                 <td style="width: 10vw;"><h5>Brand</h5></td>
                                 <td style="width: 20vw;">
-                                    @Html.DisplayFor(o => o.Main.BrandID, "", "")
+                                    @Html.TextBoxFor(o => o.Main.BrandID, "", new { @readonly = "readonly" })
                                 </td>
                             </tr>
                             <tr>
@@ -418,7 +418,7 @@
             if ($('#Main_POID').val() == "") {
                 return;
             }
-            location.href = '@Url.Action("Detail")?POID=' + document.getElementById("Main_POID").value.trim() + '&TestNo=&EditMode=True';
+            location.href = `@Url.Action("Detail")?POID=${$('#Main_POID').val()}&BrandID=${$('#Main_BrandID').val()}&EditMode=True&TestNo=&EditMode=True`;
         });
     }
 
