--- a/Quality/Quality/Areas/FinalInspection/Views/Query/_Tab1_Layout.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Query/_Tab1_Layout.cshtml
@@ -9,39 +9,22 @@
     }
 </style>
 
-<table class="generalClass al-m" style="transform: translate(-50%, 0%);width: 48%;">
-    <tr>
-        <td style="width:20%">
-            @Html.CheckBoxFor(o => o.FinalInspection.FabricApprovalDoc, new { @disabled = "disabled", @class = "checkboxInput" })
-        </td>
-        <td>
-            <div><label class="checkboxlabel">Fabric Approval</label></div>
-        </td>
-    </tr>
-    <tr>
-        <td>
-            @Html.CheckBoxFor(o => o.FinalInspection.SealingSampleDoc, new { @disabled = "disabled", @class = "checkboxInput" })
-        </td>
-        <td>
-            <div><label class="checkboxlabel">Sealing Sample</label></div>
-        </td>
-    </tr>
-    <tr>
-        <td>
-            @Html.CheckBoxFor(o => o.FinalInspection.MetalDetectionDoc, new { @disabled = "disabled", @class = "checkboxInput" })
-        </td>
-        <td>
-            <div><label class="checkboxlabel">Metal Detection</label></div>
-        </td>
-    </tr>
-    <tr>
-        <td>
-            @Html.CheckBoxFor(o => o.FinalInspection.GarmentWashingDoc, new { @disabled = "disabled", @class = "checkboxInput" })
-        </td>
-        <td>
-            <div><label class="checkboxlabel">Garment Washing Test (FGWT)</label></div>
-        </td>
-    </tr>
+<table class="generalClass al-m" style="transform: translate(-50%, -40%);width: 48%;">
+
+    @foreach (var item in Model.FinalInspection.GeneralList)
+    {
+        bool IsChecked = Model.FinalInspection.GeneralDic[item.GeneralColName];
+
+        <tr>
+            <td style="width:20%">
+                @Html.CheckBox($@"FinalInspection.{item.GeneralColName}", IsChecked, new { @class = "checkboxInput", @disabled = "disabled", @ID = $@"FinalInspection_{item.GeneralColName}" })
+            </td>
+            <td>
+                <div><label class="checkboxlabel">@item.ShowText</label></div>
+            </td>
+        </tr>
+    }
+
     @if (Model.FinalInspection.InspectionStage == "Final")
     {
         <tr>
