--- a/Quality/Quality/Areas/BulkFGT/Views/TPeelStrengthTest/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/TPeelStrengthTest/Index.cshtml
@@ -362,10 +362,10 @@
                             </h4>
                         </div>
                         <div class="buttonAreaItem">
-                            <h4 id="NewItem" class="toolBarItem">
+                            @*<h4 id="NewItem" class="toolBarItem">
                                 <img src="~/Image/Icon/New.png" width="30" />
                                 New Item
-                            </h4>
+                            </h4>*@
                         </div>
                     </div>
 
@@ -634,7 +634,7 @@
                                             @Model.DetailList[i].LastUpadate
                                         </div>
                                         <div class="DetailDataAreaItem1 colBody @rowName">
-                                            <img class="detailDelete" src="~/Image/Icon/Delete.png" width="30" />
+                                            @*<img class="detailDelete" src="~/Image/Icon/Delete.png" width="30" />*@
                                         </div>
                                     }
                                 }
@@ -691,6 +691,10 @@
                 // 可編輯欄位開啟
                 $('.CanEdit').removeAttr("disabled");
                 $('.CanEdit').removeAttr("readonly");
+
+                if ($("#Main_Status").val() != '') {
+                    $('#Main_OrderID').attr("readonly", "readonly");
+                }
 
                 // 編輯模式可用功能開啟
                 $('#Save, #Undo ,#Picture ,#NewItem ,#MachineReportUpload').addClass("canUse");
