--- a/Quality/Quality/Areas/BulkFGT/Views/TPeelStrengthTest/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/TPeelStrengthTest/Index.cshtml
@@ -967,12 +967,12 @@
 
         });
         $('#Undo').on('click', function () {
-            if (EditType == 'New') {
+            @*if (EditType == 'New') {
                 window.location.href="@Url.Action("Index")";
-            }
+            }*@
             if ($("#Main_ReportNo").val() != '') {
                 // 重新Query 一次Detail
-                window.location.reload();
+                $("#btnQuery").click();
             }
             else {
                 EditMode = false;
